syntax = "proto3";
package outer;
option  go_package = "/outer";

import "base.proto";

// 获取上、下级信息
message AgentMembersReq {// tag:player
}
message AgentMembersRsp {
    PlayerInfo UpMember             = 1;
    repeated PlayerInfo DownMembers = 2;
}