syntax = "proto3";
package outer;
option  go_package = "/outer";

import "base.proto";
import "type.proto";

// 麻将-血战到底 协议 (Mahjong-Battle to the End)

// 血战到底 参与游戏的玩家数据
message MahjongPlayerInfo {
    int64    ShortId           = 1; // 参与者短ID
    int32    DecideColor       = 2; // 定缺花色 1.万、2.条、3.筒
    repeated int32 Cards       = 3; // 手牌 (万11-19 条21-29 筒31-39)
    repeated int32 CardPong    = 4; // 碰的牌组 数组长度表示几组碰，值代表牌
    repeated int32 CardGang    = 5; // 杠的牌组 数组长度表示几组杠，值代表牌
}

// 血战到底 游戏数据
message MahjongBTEGameInfo {
    MahjongBTEState            State            = 1; // 当前状态
    int64                      StateEnterAt     = 2; // 当前状态的进入时间(毫秒)
    repeated MahjongPlayerInfo Players          = 3; // 玩家信息
    int32                      TotalCardsCount  = 4; // 剩余总牌数
    int64                      CurrentOpShortId = 5; // 当前操作者
    int64                      OpType           = 6; // 操作类型
    int64                      OpTimeoutAt      = 7; // 操作结束结束时间(毫秒)
}

////////////////////////////////////////////// 游戏操作请求 //////////////////////////////////////////////
// 换三张确定
message MahjongBTEExchange3Req {
    repeated int32 Index = 1; // 13张牌下标 0~12
}
message MahjongBTEExchange3Rsp {
}

// 定缺确定
message MahjongBTEDecideIgnoreReq {
    int32 color = 1; // 1.万、2.条、3.筒
}
message MahjongBTEDecideIgnoreRsp {
}

// 出牌
message MahjongBTEDealReq {
    int32 Index = 1;// 手牌下标 0开始
}
message MahjongBTEDealRsp {
    repeated int32 Cards      = 1; // 最新手牌
    repeated int32 CardPong   = 2; // 碰的牌组
    repeated int32 CardGang   = 3; // 杠的牌组
}

// 过、碰、杠、胡
message MahjongBTEOperateReq {
    int32 OpType = 1; // 0.过、1.碰、2.杠、3.胡
}
message MahjongBTEOperateRsp {
    repeated int32 Cards      = 1; // 最新手牌
    repeated int32 CardPong   = 2; // 碰的牌组 数组长度表示几组碰，值代表牌
    repeated int32 CardGang   = 3; // 杠的牌组 数组长度表示几组杠，值代表牌
}


////////////////////////////////////////////// 游戏通知 //////////////////////////////////////////////
// 开始发牌通知
message MahjongBTEDealNtf {
    repeated int32 Cards   = 1; // 手牌 (万11-19 条21-29 筒31-39)
}

// 开始换三张
message MahjongBTEExchange3Ntf {
}

// 换三张结束
message MahjongBTEExchange3EndNtf {
    int64 ShortId               = 1; // 换牌的玩家短id
    repeated int32 ThreeCardOut = 2; // 换出的三张牌
    repeated int32 ThreeCardIn  = 3; // 换来的三张牌
    repeated int32 Cards        = 4; // 最新手牌 (万11-19 条21-29 筒31-39)
}

// 开始定缺通知
message MahjongBTEDecideIgnoreNtf {
}

// 开始游戏通知
message MahjongBTEPlayingNtf {
    map<int64, int32> Colors = 1; // 每位玩家的定缺花色 map<短ID，定缺花色>
}

// 玩家轮动通知
message MahjongBTETurnNtf {
    int64 OpShortId   = 1; // 操作者
    int32 TotalCards  = 2; // 剩余总牌数
    int32 OpType      = 3; // 操作类型，1.碰、2.杠、3.胡、4.出牌
    int32 HuType      = 4; // 胡牌类型
    int32 NewCard     = 5; // 摸得的牌
    int64 OpEndAt     = 6; // 操作结束时间(毫秒)
}

// 玩家操作结果通知
message MahjongBTEOperaNtf {
    int64 OpShortId   = 1; // 操作者
    int32 OpType      = 3; // 操作类型，1.碰、2.杠、3.胡、4.出牌
    int32 HuType      = 4; // 胡牌类型
    int64 OpEndAt     = 6; // 操作结束时间(毫秒)
}
